# image_generator

./: README.md  app.py  gen_img.py  generate_image.py  messages.csv  output.csv  pyproject.toml  test.py  weekly_test.py
output_for_slack_app/: output.csv
src/: level.csv  messages.csv  messages.numbers  send_feedback.py
static/js/: animation.js
templates/: template.html
