[tool.poetry]
name = "oreilly_note"
version = "0.1.0"
description = ""
authors = ["kuribayashi <tktkchestnut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
Pillow = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
