[tool.poetry]
name = "oreilly_note"
version = "0.1.0"
description = ""
authors = ["kuribayashi <tktkchestnut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
Pillow = "^8.3.0"
pandas = "^1.3.1"
Flask = "^2.0.1"
Flask-Bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.9.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 130
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

